Add place attribute to concerts